tests/snapshots/examples_fixtures/type_system__failing__157_match_tuple_missing_catchall_general.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/157_match_tuple_missing_catchall_general.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E015]: NON-EXHAUSTIVE MATCH

Match over tuple domains is conservatively non-exhaustive without an unguarded catch-all arm.

  --> examples/type_system/failing/157_match_tuple_missing_catchall_general.flx:3:14
  |
3 |     let _x = match t {
  |              ^^^^^^^^^
4 |         (1, true) -> 1,
  | ^^^^^^^^^^^^^^^^^^^^^^^
5 |         (2, false) -> 2,
  | ^^^^^^^^^^^^^^^^^^^^^^^^
6 |     }
  | ^^^^^

Hint:
  Add an unguarded `_ -> ...` arm. Tuple exhaustiveness is checked conservatively.
== stdout ==
<not executed>
